--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
         "autoprefixer": "^10.4.12",
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
-        "eslint": "^8.57.0",
+        "eslint": "^8.57.1",
         "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-prettier": "^5.1.3",
+        "eslint-plugin-prettier": "^5.4.0",
         "eslint-plugin-react": "^7.34.4",
         "eslint-plugin-react-hooks": "^4.6.2",
         "laravel-vite-plugin": "^1.2.0",
         "postcss": "^8.4.31",
-        "prettier": "^3.3.0",
+        "prettier": "^3.5.3",
         "prettier-plugin-organize-imports": "^4.0.0",
         "prettier-plugin-tailwindcss": "^0.6.5",
         "react": "^18.2.0",
@@ -37,6 +37,7 @@
         "vite": "^6.2.4"
     },
     "dependencies": {
-        "clsx": "^2.1.1"
+        "clsx": "^2.1.1",
+        "fuse.js": "^7.1.0"
     }
 }
