--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "@inertiajs/react": "^2.0.0",
         "@tailwindcss/forms": "^0.5.3",
         "@tailwindcss/vite": "^4.0.0",
-        "@types/node": "^18.13.0",
+        "@types/node": "^18.19.100",
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.10",
         "@typescript-eslint/eslint-plugin": "^7.16.0",
@@ -33,7 +33,8 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
-        "typescript": "^5.0.2",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.8.3",
         "vite": "^6.2.4"
     },
     "dependencies": {
