--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
-        "spatie/laravel-medialibrary": "^11.12",
+        "php-ffmpeg/php-ffmpeg": "^1.3",
         "spatie/laravel-permission": "^6.17",
         "tightenco/ziggy": "^2.0"
     },
