--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,11 @@
         "laravel/breeze": "^2.3",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
+        "laravel/scout": "^10.15",
         "laravel/tinker": "^2.10.1",
         "php-ffmpeg/php-ffmpeg": "^1.3",
         "spatie/laravel-permission": "^6.17",
+        "teamtnt/laravel-scout-tntsearch-driver": "^15.0",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
