--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@types/node": "^18.19.100",
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.10",
+        "@types/react-window": "^1.8.8",
         "@typescript-eslint/eslint-plugin": "^7.16.0",
         "@typescript-eslint/parser": "^7.16.0",
         "@vitejs/plugin-react": "^4.2.0",
@@ -39,6 +40,8 @@
     },
     "dependencies": {
         "clsx": "^2.1.1",
-        "fuse.js": "^7.1.0"
+        "fuse.js": "^7.1.0",
+        "react-intersection-observer": "^9.16.0",
+        "react-window": "^1.8.11"
     }
 }
