--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "clsx": "^2.1.1",
         "fuse.js": "^7.1.0",
         "react-intersection-observer": "^9.16.0",
-        "react-window": "^1.8.11"
+        "react-window": "^1.8.11",
+        "ziggy-js": "^2.5.3"
     }
 }
